--- a/.github/workflows/Waka Readme.yml
+++ b/.github/workflows/Waka Readme.yml
@@ -21,11 +21,11 @@ jobs:
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
           TIME_RANGE: all_time # optional
-          LANG_COUNT: 10 # optional
+          LANG_COUNT: 5 # optional
           SHOW_TIME: true # optional
           SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
-          STOP_AT_OTHER: true # optional
+          STOP_AT_OTHER: false # optional
           IGNORED_LANGUAGES: YAML JSON TOML # optional
           ### commit
           COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
